# bankingGuru

./: .gitignore  ARCHITECTURE.md  CHAOS-ENGINEERING.md  CLAUDE.md  DEMO_WALKTHROUGH.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: commit.md  linear-sync.md  lint-fix.md  pr.md  test.md  type-fix.md
.claude/patches/: linear-mcp-patched.js
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: chaos.py  config.py  database.py  fraud_model.py  main.py  middleware.py  models.py  observability.py  schemas.py  seed.py
backend/app/routers/: accounts.py  chaos.py  disputes.py  fraud.py  transactions.py
backend/tests/: conftest.py  test_api.py  test_disputes.py  test_fraud.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/accounts/: AccountCard.tsx  AccountList.tsx
frontend/src/components/disputes/: DisputeDetail.tsx  DisputeForm.tsx  DisputeList.tsx  DisputeStatusBadge.tsx
frontend/src/components/layout/: Shell.tsx  Sidebar.tsx
frontend/src/components/transactions/: TransactionFilters.tsx  TransactionTable.tsx
frontend/src/components/ui/: badge.tsx  (+4 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  DisputesPage.tsx  FraudDashboardPage.tsx  LoginPage.tsx  MyDisputesPage.tsx  TransactionsPage.tsx
frontend/src/types/: index.ts
notebooks/: fraud_model.py
scripts/: demo.sh
